LOGCXX-231: Remove LoggerPtr from LoggingEvent